--- a/app/views/members/comments/create.js.erb
+++ b/app/views/members/comments/create.js.erb
@@ -1,5 +1,5 @@
 $('#comments_index').html("<%= j(render 'members/comments/index',comments: @comment.request.comments) %>");
-$("textarea").val('');
+$("#comment_comment").val("");
 
 
 
