--- a/app/views/members/requests/new.html.erb
+++ b/app/views/members/requests/new.html.erb
@@ -16,6 +16,12 @@
   <%=f.text_area :content ,class:"form-control book_body"%>
   </div><br>
   
+  <div class="form-group">　
+  <lavel class=book_opinion>タグ</lavel>
+  <%=f.text_field :tag_name ,class:"form-control book_body"%>
+  </div><br>
+  
+  
   <div class="form-group">
   <%=f.submit'リクエスト作成',class:"btn btn-success" %>
   </div>
