--- a/app/views/members/requests/show.html.erb
+++ b/app/views/members/requests/show.html.erb
@@ -3,6 +3,9 @@
 <%= @request.location %>
 <%= @request.content %>
 <%= @request.is_active %>
+<% @request_tags.each  do |tag| %>
+  <%=  tag.name %>
+<% end %>
 
 
 <div id="like-btn_<%= @request.id %>">
