--- a/app/views/members/likes/_like-btn.html.erb
+++ b/app/views/members/likes/_like-btn.html.erb
@@ -1,5 +1,5 @@
 <% if request.liked_by?(current_member) %>
-  <%= link_to request.likes.count, request_like_path(request), method: :delete,remote: true %>
+  <div>いいね:<%= link_to request.likes.count, request_like_path(request), method: :delete,remote: true %></div>
 <% else %>
-  <%= link_to request.likes.count, request_like_path(request), method: :post, remote: true %>
+  <div>いいね:<%= link_to request.likes.count, request_like_path(request), method: :post, remote: true %></div>
 <% end %>
