--- a/app/views/members/requests/new.html.erb
+++ b/app/views/members/requests/new.html.erb
@@ -2,6 +2,11 @@
   <%=form_with model:@request,local:true do |f| %>
   
   <div class="form-group">
+  <lavel>タイトル</lavel>
+  <%=f.text_field :title ,class:"form-control book_title" %>
+  </div>
+  
+  <div class="form-group">
   <lavel>予定日</lavel>
   <%=f.date_field :schedule ,class:"form-control book_title" %>
   </div>
