--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <% unless current_page?(new_member_registration_path) && (new_member_session_path) %>
+    <% unless current_page?(new_member_registration_path) %>
     <header class="header">
       <%= render 'layouts/header' %>
     </header>
