--- a/app/views/members/members/show.html.erb
+++ b/app/views/members/members/show.html.erb
@@ -1,4 +1,6 @@
-<div>
+<div class="container">
+ <div class="row">
+   <div>
  <%= "プロフィール写真" %>
  <%= attachment_image_tag @member, :image,fallback: "noimage.jpg",size:"150x150" %>
 
@@ -62,3 +64,5 @@
 <% end %>
 
 <%= paginate @requests %>
+ </div>
+</div>
