--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
   </head>
 
   <body>
-    <% unless current_page?(new_member_registration_path) %>
+    <% unless current_page?(new_member_registration_path) && (new_member_session_path) %>
     <header class="header">
       <%= render 'layouts/header' %>
     </header>
     <% end %>
 
-    <main class="main" >
+    <main class="main">
       <%= flash[:error] %>
       <%= yield %>
     </main>
