--- a/app/views/members/requests/new.html.erb
+++ b/app/views/members/requests/new.html.erb
@@ -1,29 +1,30 @@
-<h2 class="mt-3">New Request</h2>
+<div class="container">
+  <div class="row mt-3">
   <%=form_with model:@request,local:true do |f| %>
   
   <div class="form-group">
   <lavel>タイトル</lavel>
-  <%=f.text_field :title ,class:"form-control book_title" %>
+  <%=f.text_field :title ,class:"form-control" %>
   </div>
   
   <div class="form-group">
   <lavel>予定日</lavel>
-  <%=f.date_field :schedule ,class:"form-control book_title" %>
+  <%=f.date_field :schedule ,class:"form-control" %>
   </div>
   
   <div class="form-group">
   <lavel class=book_opinion>場所</lavel>
-  <%=f.text_field :location ,class:"form-control book_body"%>
+  <%=f.text_field :location ,class:"form-control "%>
   </div><br>
   
   <div class="form-group">　
   <lavel class=book_opinion>内容</lavel>
-  <%=f.text_area :content ,class:"form-control book_body"%>
+  <%=f.text_area :content ,class:"form-control"%>
   </div><br>
   
   <div class="form-group">　
   <lavel class=book_opinion>タグ</lavel>
-  <%=f.text_field :tag_name ,class:"form-control book_body"%>
+  <%=f.text_field :tag_name ,class:"form-control"%>
   </div><br>
   
   
@@ -31,4 +32,6 @@
   <%=f.submit'リクエスト作成',class:"btn btn-success" %>
   </div>
   <% end %>
+  </div>
+</div>
 
