--- a/app/views/members/members/show.html.erb
+++ b/app/views/members/members/show.html.erb
@@ -28,7 +28,7 @@
            </tr>
            <tr>
              <th><%= "自己紹介" %></th>
-             <th><%= @member.introduction.truncate(24, omission: '...........') %></th>
+             <th><%= @member.introduction %></th>
            </tr>
         </tbody>
       </table>
