--- a/app/views/members/requests/new.html.erb
+++ b/app/views/members/requests/new.html.erb
@@ -24,7 +24,7 @@
   
   <div class="form-group">　
   <lavel class=book_opinion>タグ</lavel>
-  <%=f.text_field :tag_name ,class:"form-control"%>
+  <%= f.text_field :caption, class:"form-control"%>
   </div><br>
   
   
