--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <span>
       <h2>SH</h2>
+      <%= render 'layouts/search' %>
     </span>
     <div class="row justify-content-center">
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -30,8 +31,8 @@
         </ul>
       </div>
     </div>
-  </div> 
-</nav>  
+  </div>
+</nav>
 
 <!--<div class="container">-->
 <!--  <div class="row">-->
