--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,8 +1,7 @@
 <div class="search-form">
   <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.text_field :content %>
-    <%= f.select :model, options_for_select({ "Member" => "ユーザー名", "Request" => "" }) %>
-    <%= f.select :method, options_for_select({ "完全一致" => "perfect", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partial" }) %>
+    <%= f.select :model, options_for_select({ "ユーザー名" => "Member", "リクエスト" => "Re" }) %>
+    <%= f.text_field :search,placeholder:"キーワードで検索"  %>
     <%= f.submit '検索' %>
   <% end %>
 </div>
