--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,12 @@
           <li class="nav-item">
             <%= link_to "リクエスト一覧",requests_path, class: 'nav-link text-dark' %>
           </li>
+          <% if unchecked_notifications.any? %>
+            <i class="fa fa-circle" style="color: gold;"></i>
+        <% end %>
+          <li class="nav-item active">
+            <%= link_to "通知",notifications_path ,class: 'nav-link text-dark' %>
+          </li>
         <% else %>
           <li class="nav-item">
             <%= link_to "新規登録", new_member_registration_path, class: 'nav-link text-dark' %>
