--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,7 +1,7 @@
 
 <div class="search-form">
   <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.select :model, options_for_select({ "ユーザー名" => "Member", "リクエスト" => "Re" }) %>
+    <%= f.select :model, options_for_select({ "ユーザー名" => "Member", "リクエスト" => "Request" }) %>
     <%= f.text_field :search,placeholder:"キーワードで検索"  %>
     <%= f.submit '検索' %>
   <% end %>
