[start]問い合わせ機能

--- a/app/views/admins/members/show.html.erb
+++ b/app/views/admins/members/show.html.erb
@@ -36,7 +36,7 @@
 
       <div class="offset-4 col-8 mt-3">
       <%= link_to "編集する",edit_admins_member_path(@member),class:"btn btn-outline-dark mr-5" %>
-      <%= link_to "リクエスト一覧", class:"btn btn-outline-dark mr-5" %>
+      <%= link_to "リクエスト一覧",admins_requests_path ,class:"btn btn-outline-dark mr-5" %>
       </div>
 
     </div>
