--- a/app/views/admins/requests/index.html.erb
+++ b/app/views/admins/requests/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Admins::Requests#index</h1>
-<p>Find me in app/views/admins/requests/index.html.erb</p>
+<div class="container">
+  <div class="row mt-3">
+    <% @requests.each do |req| %>
+
+    <div class="col-4 mt-3">
+      <div class="card " style="min-width: 15rem;">
+        <div class="card-header"><%= req.title %></div>
+        <div class="card-body">
+          <div><%= req.schedule %></div>
+          <div><%= req.location %></div>
+          <div><%= req.is_active %></div>
+          <div class="text-right"><%= link_to "詳細を見る",admins_request_path(req),class:"btn btn-outline-dark" %></div>
+        </div>
+        <div class="card-footer">
+          <div>
+            <%= link_to admins_member_path(req.member.id) do %>
+            <%= attachment_image_tag req.member, :image, fallback: "noimage.jpg",size:"35x35" ,class:"rounded-circle border border-dark"%>
+            <%= req.member.nickname %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+    <% end %>
+
+  </div>
+  <div class="row mt-5 mb-5 justify-content-center"> <%= paginate @requests %></div>
+</div>
+
+
+
