[update]問い合わせ機能

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,14 +7,14 @@
    <div class="col-lg-3">
      <h4 class="text-center"><%= "ABOUT"%></h4>
      <h5 class="text-center"><%= link_to "シェアホビについて",about_path %></h5>
-   </div> 
+   </div>
    <div class="col-lg-3">
      <h4 class="text-center"><%= "GUIDE"%></h4>
      <h5 class="text-center"><%= link_to "利用方法",guide_path %></h5>
    </div>
    <div class="col-lg-3">
      <h4 class="text-center"><%="CONTACT"%></h4>
-     <h5 class="text-center"><%= link_to "問い合わせ"%></h5>
-   </div> 
+     <h5 class="text-center"><%= link_to "問い合わせ",new_contact_path %></h5>
+   </div>
   </div>
 </div>
