[fix]エラー箇所

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
             <%= link_to "マイページ", member_path(current_member), class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item">
-            <%= link_to "リクエスト作成",new_request_path(current_member), class: 'nav-link text-dark' %>
+            <%= link_to "リクエスト作成",new_request_path, class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item">
             <%= link_to "リクエスト一覧",requests_path, class: 'nav-link text-dark' %>
