--- a/app/views/members/requests/show.html.erb
+++ b/app/views/members/requests/show.html.erb
@@ -30,15 +30,15 @@
 </div>
 
 <div>
-
+  <% if @request.member_id == current_member.id %>
+    <div><p class="text-danger">リクエスト状態変更ボタン作成予定</p></div>
+  <% else %>
     <%= form_with model: @request,url: request_is_active_release_path(@request),method: :patch,local:true do |f| %>
     <%= f.submit "リクエスト受諾" %>
     <% end %>
+  <% end %>  
 
    <div></div>
-
-
-  <%#= link_to "リクエスト受諾",request_is_active_release_path(@request),method: :patch,"data-confirm" => "リクエストを受諾しますか？" %>
 
 
 </div>
