--- a/app/views/members/requests/index.html.erb
+++ b/app/views/members/requests/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-3">
     <% @requests.each do |req| %>
-
+    <% if req.is_active == "release" %>
     <div class="col-4 mt-3">
       <div class="card " style="min-width: 15rem;">
         <div class="card-header"><%= req.title %></div>
@@ -21,6 +21,7 @@
         </div>
       </div>
     </div>
+    <% end %>
     <% end %>
 
   </div>
