--- a/app/views/members/rooms/index.html.erb
+++ b/app/views/members/rooms/index.html.erb
@@ -1,3 +1,3 @@
 <% @rooms.each do |room| %>
-  <%= link_to room.id, room_path(room) %>
+  <%= link_to room.room_id, room_path(room.room_id) %>
 <% end %>
