--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,10 +22,10 @@
             <%= link_to "マイページ", member_path(current_member), class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item">
-            <%= link_to "リクエスト作成",new_request_path, class: 'nav-link text-dark' %>
+            <%= link_to "新規投稿作成",new_request_path, class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item">
-            <%= link_to "リクエスト一覧",requests_path, class: 'nav-link text-dark' %>
+            <%= link_to "投稿一覧",requests_path, class: 'nav-link text-dark' %>
           </li>
 
           <li class="nav-item">
@@ -33,8 +33,8 @@
           </li>
 
           <% if unchecked_notifications.any? %>
-            <i class="fa fa-circle" style="color: gold;"></i>
-        <% end %>
+            <i class="fa fa-circle" style="color: black;"></i>
+          <% end %>
           <li class="nav-item active">
             <%= link_to "通知",notifications_path ,class: 'nav-link text-dark' %>
           </li>
