--- a/app/views/members/notifications/_notification.html.erb
+++ b/app/views/members/notifications/_notification.html.erb
@@ -2,13 +2,15 @@
 <% visitor = notification.visitor %>
 <% request = notification.request %>
 
-<div class="user-view clearfix ">
+<div class=" mt-2 border-bottom">
   <%= link_to member_path(notification.visitor) do %>
     <%= attachment_image_tag visitor, :image, fallback: "noimage.jpg",size:"35x35" ,class:"rounded-circle border border-dark"%>
   <% end %>
-  <%= notification_form(notification) %><%= " (#{time_ago_in_words(notification.created_at)}前)" %>
-  <br>
+  <p class="text-dark">
+    <%= notification_form(notification) %><%= " (#{time_ago_in_words(notification.created_at)}前)" %>
+  </p>
+  <p>
   <% if !@comment.nil? %>
-    <p class="moderate-font"><%= @comment %></p>
+    <p><%= @comment %></p>
   <% end %>
 </div>
