--- a/app/views/members/rooms/index.html.erb
+++ b/app/views/members/rooms/index.html.erb
@@ -1,3 +1,24 @@
-<% @rooms.each do |room| %>
-  <%= link_to room.room_id, room_path(room.room_id) %>
-<% end %>
+<div class="container">
+  <div class="row mt-3">
+    <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th>取引ID</th>
+          <th>取引ユーザー名</th>
+          <th>取引開始日</th>
+          <th>取引ページへ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @rooms.each do |room| %>
+        <tr>
+          <td><%= room.room_id %></td>
+          <td><%# member.nickname %></td>
+          <td><%= room.created_at.strftime('%Y/%m/%d') %></td>
+          <td><%= link_to "チャットする", room_path(room.room_id),class:"btn btn-warning" %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
